[package]
name = "sockjs"
version = "0.0.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "SockJS server for Actix"
readme = "README.md"
keywords = ["actor", "http", "websockets", "sockjs"]
homepage = "https://github.com/fafhrd91/actix-sockjs"
repository = "https://github.com/fafhrd91/actix-sockjs.git"
documentation = "https://fafhrd91.github.io/actix-sockjs/actix-sockjs/"
categories = ["network-programming", "asynchronous"]
license = "Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
# build = "build.rs"

[lib]
name = "sockjs"
path = "src/lib.rs"

[dependencies]
time = "0.1"
http = "0.1"
md5 = "0.3"
rand = "0.3"
regex = "0.2"
lazy_static = "0.2"
percent-encoding = "1.0"

# serde
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# tokio
bytes = "0.4"
futures = "0.1"

# other
log = "0.3"

[dependencies.actix]
#version = ">=0.3.1"
#path = "../actix"
git = "https://github.com/actix/actix.git"

[dependencies.actix-web]
#version = "0.1"
path = "../actix-web"
#git = "https://github.com/fafhrd91/actix-web.git"

[profile.release]
lto = true
opt-level = 3
debug = true

[dev-dependencies]
env_logger = "0.4"
