[package]
name = "sockjs"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "SockJS server for Actix"
readme = "README.md"
keywords = ["actor", "http", "websockets", "sockjs", "actix"]
homepage = "https://github.com/actix/sockjs"
repository = "https://github.com/actix/sockjs.git"
documentation = "https://docs.rs/sockjs/"
categories = ["network-programming", "asynchronous"]
license = "Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml", "/protocol/**"]
build = "build.rs"

[badges]
travis-ci = { repository = "actix/sockjs", branch = "master" }
codecov = { repository = "actix/sockjs", branch = "master", service = "github" }

[lib]
name = "sockjs"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
time = "0.1"
http = "0.1"
md5 = "0.3"
rand = "0.3"
regex = "0.2"
lazy_static = "0.2"
percent-encoding = "1.0"

# serde
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# other
log = "0.3"

[dependencies.actix]
version = ">=0.3.1"

[dependencies.actix-web]
version = "0.2"

[profile.release]
lto = true
opt-level = 3
debug = true

[dev-dependencies]
env_logger = "0.4"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
