[package]
name = "sockjs"
version = "0.4.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "SockJS server for Actix"
readme = "README.md"
keywords = ["http", "web", "websockets", "sockjs", "actix"]
homepage = "https://github.com/actix/sockjs"
repository = "https://github.com/actix/sockjs.git"
documentation = "https://docs.rs/sockjs/"
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml", "/protocol/**"]
build = "build.rs"

[badges]
travis-ci = { repository = "actix/sockjs", branch = "master" }
codecov = { repository = "actix/sockjs", branch = "master", service = "github" }

[lib]
name = "sockjs"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0"
bytes = "0.4"
futures = "0.1"
time = "0.1"
http = "^0.1.5"
md5 = "0.3"
rand = "0.3"
regex = "0.2"
lazy_static = "0.2"
percent-encoding = "1.0"

# serde
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# other
log = "0.4"

# actix
actix = "^0.5.1"
actix-web = "^0.6"

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
env_logger = "0.5"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
